--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,7 @@ body{
     "gnavbar gnavbar"
     "gasidebar ggrid"
     "gfooter gfooter";
-    grid-template-rows: 0.8fr 4fr 0.5fr;
+    grid-template-rows: 0.5fr 4fr 0.5fr;
 }
 .navbar{
     background-color:rgb(35, 33, 32);
@@ -24,32 +24,50 @@ body{
     background-color:darkgray;
     grid-area: gasidebar;
 }
+.conteiner_asideba_categoria_b{
+    color: #fff;
+}
 
 .gridmain{
     background-color:white;
     grid-area: ggrid;
-    margin: 20px;
+    margin: 30px;
     display: grid;
     grid-template-columns: repeat( auto-fit, minmax(300px,1fr));
     text-align: center;
-    gap:10px;
+    gap:20px;
+    justify-items: start;
 }
 
 .footer{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap:10px;
     background-color:rgb(35, 33, 32);
     grid-area: gfooter;
     color: #fff;
 }
 
 .conteiner_menu{
-    height: 70px;
+    height: 100px;
     width: 90%;
     display: flex;
     flex-flow: column;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    background-image: url("/assets/img/foto1.jpeg");
+    background-position: center;
+    background-repeat: no-repeat;
 }
+
+.conteiner_menu_img{
+    width: 300px;
+    height:70px;
+}
+
 .conteiner_menu_texto{
     padding-left: 20px;
 }
@@ -77,5 +95,6 @@ body{
     width: 50%;
 } 
 .gridmain_item_card_img{
-    height: 250px;
+    height: 210px;
+    width: 250px;
 }
